# Less-Annoying-CRM-Sales-Navigator

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
src/: lib.rs  main.rs
src/api/: create_contact.rs  get_contacts.rs  mod.rs
src/cli/: commands.rs  mod.rs
src/csv/: mod.rs  parser.rs  record.rs
