[package]
name = "lessannoyingcrm-salesnavigator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
async-trait = "0.1.75"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.11", features = ["derive", "env"] }
csv = "1.3.0"
dotenv = { version = "0.15.0", features = ["clap"] }
regex = "1.10.2"
reqwest = { version = "0.11.23", features = ["json", "tokio-rustls", "serde_json", "cookies"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.3"
tokio = { version = "1.35.1", features = ["full"] }
